<resources>
    <string name="app_name">幕V</string>

    <string name="click_again_to_exit_text">再按一次退出</string>

    <string name="button_ok_text">确定</string>
    <string name="button_cancel_text">取消</string>

    <string name="setting_text">设置</string>
    <string name="search_text">搜索</string>


    <string name="index_text">主页</string>
    <string name="muv_text">幕V</string>
    <string name="live_text">直播</string>
    <string name="popular_text">热门</string>
    <string name="featured_text">精选</string>
    <string name="same_city_text">同城</string>


    <string name="my_focus_text">我的关注</string>
    <string name="classify_text">分类</string>
    <string name="me_text">我</string>

    <string name="login_text">登录</string>
    <string name="login_by_username_text">账号登录</string>
    <string name="other_login_method_text">其他登录方式</string>
    <string name="register_text">注册</string>

    <string name="network_text">网络</string>
    <string name="switch_server_text">切换服务器</string>
    <string name="choose_server_text">选择服务器</string>
    <string name="chosen_result_text">选择了%1$s</string>

    <string name="scan_local_video_text">扫描本地视频</string>

    <string name="username_hint">请输入用户名</string>
    <string name="password_hint">请输入密码</string>
    <string name="password_confirm_hint">请确认密码</string>

    <string name="user_center_text">个人中心</string>
    <string name="user_setting_text">个人设置</string>
    <string name="logout_text">退出登录</string>

    <string name="recording_text">录制</string>
    <string name="start_live_text">开始直播</string>


    <string name="tip_text">提示</string>
    <string name="ok_text">确认</string>
    <string name="cancel_text">取消</string>



</resources>
